--- a/content/post/2019-10-05-baby-names.Rmd
+++ b/content/post/2019-10-05-baby-names.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Why is everyone I work with named Chris? A deep dive on top baby names in America"
+title: "Why does everyone I work with have the same name? A guide on how to not pick a unique baby name in America."
 author: ~
 date: '2019-10-05'
 slug: baby-names
@@ -10,19 +10,13 @@ tags: ['r', 'plotly', 'ggplot2', 'dataviz', 'data-journalism']
 codefolding_show: hide
 ---
 
-I work with a lot of people named Chris. And on my last team, I worked with even more people named Chris. So what?
-
 I've taken a particular interest in names since I'm thinking of a name for my to-be-born son. I did a little digging through the [Social Security Administration names database]( https://www.ssa.gov/oact/babynames/limits.html), which lists all names given to baby boys and girls in America[^1]. I began this exercise to just get a quality list of ideas, but my curiosity got the better of me.
 
 [^1]:It even breaks it down by state. It'll return any name that is reported more than 5 times. So if the name "Juniper" is only given to four babies in the US in a given year, Juniper won't appear in the database.
 
-It turns out that between 1972 and 1995 the name "Christopher" was the second-most popular name (or 3rd). I guess that explains it. Then I found five dollars.
-
 # Name Trends Since 1950
 
-What was the most popular boy name during that time? Michael - it dominated. Michael was the top boy name between for 44 years bewteen 1954 and 1998 (except for 1960). Yet Michael doesn't _seem_ as common among my co-workers. Guess there's just something about Chris. Pretty cool name.
-
-Let's look at the top 10 names for boys across time:
+What was the most popular boy name since 1950? Michael - it dominated. Michael was the top boy name for 44 years between 1954 and 1998 (except for 1960). Let's look at the top 10 names for boys across time:
 
 _Note: These interactive plots aren't optimized for mobile devices. Please check them out on your desktop, or keep reading to see non-interactive plots. For those on desktop, you can hover your mouse and click to see different trends._
 
@@ -97,7 +91,7 @@ plot_top10(df2, s='F')
 
 Female names don't appear to be as dominant - holding on to the top 1 place seems like a rarer feat.
 
-This gets me thinking - how many names have attained that #1 status since 1950? And how does it differ across male and female names? This table below shows how many unique names have been ranked as nummber 1 between 1950 and 2018. For male, it's 7 different names. For female, it's been 10. Female names tend to change more frequently.
+This gets me thinking - how many names have attained that #1 status since 1950? And how does it differ across male and female names? This table below shows how many unique names have been ranked as number 1 between 1950 and 2018. For male, it's 7 different names. For female, it's been 10. Female names tend to change more frequently.
 
 
 ```{r, eval=F, include=F}
@@ -120,7 +114,7 @@ df2 %>%
 
 The fact that females have 63% more names in the US is kind of shocking. Why aren't male names as creative?
 
-Perhaps names are like wardrobes in America. Looking at my closet, I see a lot of blue shirts. Why? Because blue is a great color. And I think others agree. For example, it's become a joke in the workplace - I'll show up to work with the same shirt as other male colleagues. Even that one red shirt I own - just last week someone teased me because their boss wears that shirt too. He called me a copy cat or something, like my shirt was un-original. Turns out my closet isn't as diverse as I think it is. Yet, I haven't run into that problem yet with my female colleauges. They seem to be more creative.
+Perhaps names are like wardrobes in America. Looking at my closet, I see a lot of blue shirts. Why? Because blue is a great color. And I think others agree. For example, it's become a joke in the workplace - I'll show up to work with the same shirt as other male colleagues. Even that one red shirt I own - just last week someone teased me because their boss wears that shirt too. He called me a copy cat or something, like my shirt was un-original. Turns out my closet isn't as diverse as I think it is. Yet, I haven't run into that problem yet with my female colleagues. They seem to be more creative.
 
 # The Recent Top Names Back to 1880
 
@@ -145,7 +139,7 @@ df2 %>%
   theme_minimal()
   
 ```
-For a while there, boy names that became popular were at one point in the past popular. However, there seems to be a new trend among millenial parents with a name like Liam coming out of nowhere...
+For a while there, boy names that became popular were at one point in the past popular. However, there seems to be a new trend among millennial parents with a name like Liam coming out of nowhere...
 
 Female names follow a completely different track. Once a name becomes popular, it falls off a cliff years later. Girl names come and go. This plot kind of looks like long hair...a fashion choice common among women?
 
@@ -169,7 +163,7 @@ df2 %>%
 
 ```
 
-Wow - Emma made a huge comback. To go through such a decline, and then see such a resurgance to the coveted #1 spot - the other names must be jealous. And it's pretty crazy that Mary held on to 1st place from 1880 through pretty much the 1960's. Part of me wonders how accurate the SSA data is going that far back[^3]. 
+Wow - Emma made a huge comeback. To go through such a decline, and then see such a resurgence to the coveted #1 spot - the other names must be jealous. And it's pretty crazy that Mary held on to 1st place from 1880 through pretty much the 1960's. Part of me wonders how accurate the SSA data is going that far back[^3]. 
 
 [^3]: To check this, I looked at the CDC's reported population count for 2017 and matched it with the number of names I could find in the SSA's database. Turns out the SSA database covers about 92% of all names in America. So it's not 100% of the names.
 
@@ -196,7 +190,7 @@ df_uniq %>%
   
 ```
 
-I was surprised that names have gotten less creative since 2007/2008. I thought that millenials would have gotten increasingly unique with the internet and access to highly-useful information like this blog post. Perhaps, instead, we're getting stuck in an analysis paralysis, and people mostly just give up and pick whatever name is in the top 1000?
+I was surprised that names have gotten less creative since 2007/2008. I thought that millennial would have gotten increasingly unique with the internet and access to highly-useful information like this blog post. Perhaps, instead, we're getting stuck in an analysis paralysis, and people mostly just give up and pick whatever name is in the top 1000?
 
 What else could explain this rise in both names? Perhaps the data got more accurate as it became easier to report names. Maybe names took off in the 1970's because that's when computers became popular and it became easier to record things. 
 
@@ -204,7 +198,7 @@ What else could explain this rise in both names? Perhaps the data got more accur
 
 * Female names have far greater variety than male names.
 * Female names tend to fluctuate more in the upper-ranks.
-* Both male and female top names are holding a first-place rank for shorter durations than they have in the past.
+* Both male and female top names are holding a first-place rank for shorter duration than they have in the past.
 * Name creativity really started accelerating in the 1970's, but peaked in 2008.
 * There's a strong correlation between creativity in male names as in female names.
 * A name popular today will quickly decline in popularity later.
